WIP: Fix Edge flakiness by setting `letter-spacing: 0` on `__title` and `__content`

--- a/test/screenshot/spec/mdc-dialog/fixture.scss
+++ b/test/screenshot/spec/mdc-dialog/fixture.scss
@@ -25,6 +25,14 @@
 
 $custom-dialog-color: $material-color-red-300;
 
+// MS Edge only
+@supports (-ms-ime-align: auto) {
+  .mdc-dialog__title,
+  .mdc-dialog__content {
+    letter-spacing: 0;
+  }
+}
+
 .test-dialog-open-button {
   font-size: 100%; // stylelint-disable-line declaration-property-unit-whitelist
 }
